# GradientView

./: .gitignore  CMakeLists.txt  README.md  aql_out.txt  conanfile.py
.github/workflows/: build.yml
res/: Resources.qrc
src/: CellRenderer.cpp  CellRenderer.h  CudaCheck.h  DataMatrix.h  DataStore.h  ExportImageDialog.cpp  GradientExplorerPlugin.cpp  GradientExplorerPlugin.h  GradientGraph.cpp  GradientGraph.h  PluginMouseListener.cpp  ProjectionView.cpp  ProjectionView.h  ScatterplotPlugin.cpp  ScatterplotPlugin.h  ScatterplotWidget.cpp  ScatterplotWidget.h  Timer.cpp  Timer.h  Types.h  UserInterface.cpp  UserInterface.h
src/Actions/: ColoringAction.cpp  DensityPlotAction.cpp  DensityPlotAction.h  DimensionSelectionAction.h  ExportAction.cpp  ExportAction.h  ExportImageAction.cpp  ExportImageAction.h  FilterAction.cpp  FilterAction.h  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  MiscellaneousAction.cpp  MiscellaneousAction.h  OverlayAction.cpp  OverlayAction.h  PlotAction.cpp  PlotAction.h  PluginAction.cpp  PluginAction.h  PointPlotAction.cpp  PointPlotAction.h  PositionAction.cpp  RenderModeAction.cpp  RenderModeAction.h  ScalarAction.cpp  ScalarAction.h  ScalarSourceAction.cpp  ScalarSourceAction.h  SelectionAction.cpp  SettingsAction.cpp  SettingsAction.h  SubsetAction.cpp
src/Compute/: DataTransformations.cpp  DataTransformations.h  Filters.cpp  Filters.h  FloodFill.cpp  FloodFill.h  KnnGraph.cpp  KnnGraph.h  KnnIndex.cpp  KnnIndex.h  LocalDimensionality.cpp  LocalDimensionality.h  RandomWalks.cpp  RandomWalks.h  SecondaryDistanceMeasures.h
src/Export/: Export.h
src/IO/: KnnGraphIO.cpp  RankingExport.cpp
src/Models/: ColorSourceModel.cpp  ScalarSourceModel.cpp
src/Widgets/: GraphView.cpp  GraphView.h  MainView.cpp  MainView.h  ProjectionView.cpp  ProjectionView.h
